--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -10,7 +10,7 @@
     </button>
   </div>
 
-  <div #scroll class="messagesContainer" id="messagesContainer">
+  <div class="messagesContainer" id="messagesContainer">
     <div
       *ngFor="let message of messages"
       [class.myMessage]="message.myMessage"
